--- a/esphome/tagreader-seb.yaml
+++ b/esphome/tagreader-seb.yaml
@@ -19,11 +19,10 @@ improv_serial:
 substitutions:
   devicename: tagreader-seb
   friendly_name: TagReaderSeb
-
+esp8266:
+  board: d1_mini
 esphome:
   name: $devicename
-  platform: ESP8266
-  board: d1_mini
 
   project:
     name: adonno.tag_reader
