--- a/esphome/d1mini-motion-reu.yaml
+++ b/esphome/d1mini-motion-reu.yaml
@@ -1,7 +1,7 @@
 esphome:
   name: "${device_name}"
-  platform: ESP8266
-  board: d1_mini
+esp8266:
+    board: d1_mini
 
 wifi:
   ssid: !secret wifi_ssid
